objects/VIP_Required_Fields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Contact_Type_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Contact_Type__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MailingCity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact MailingCity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MailingPostalCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact MailingPostalCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MailingState__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact MailingState</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MailingStreet__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact MailingStreet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_MobilePhone__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact MobilePhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Role__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Make the contact salutation field required on the FARM VIP Registration page.</description>
        <label>Contact Salutation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check box to make the contact title field required on the farm vip registration layout.</description>
        <label>Contact Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_Host_attending__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Farm Host attending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_Notes_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Farm Notes__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_Room_With_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Farm Room_With__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Farm_Traveling_Via_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Farm Traveling_Via__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wearable_Size_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wearable_Size_if_applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>VIP Required Fields</label>
</CustomObject>